--- a/WebContent/jsp/signup.html
+++ b/WebContent/jsp/signup.html
@@ -83,139 +83,12 @@
     </main>
     <!-- Footer -->
     <footer class="footer"></footer>
-    
-
-    <!-- JS -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/common.js"></script>
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-    <script>
-        fetch("header")
-            .then(response => {
-                return response.text()
-            })
-            .then(data => {
-                document.querySelector("header").innerHTML = data;
-        });
-        fetch("footer")
-            .then(response => {
-                return response.text()
-            })
-            .then(data => {
-                document.querySelector("footer").innerHTML = data;
-        });        
-        function buttonActivator() { 
-            var passMatch = false;
-            $('#errorMessage')[0].style.display = 'none';
-            document.getElementById('agree-term').checked = false;
-            $('#signup').prop('disabled', 'true');
-            $('#agree-term').prop('disabled', 'true');
-            // console.log('Key Pressed');
-            // console.log($("#pass").val().length , $("#re_pass").val().length);
-            if($("#pass").val().length && $("#re_pass").val().length){
-                if ($("#pass").val() === $("#re_pass").val())
-                {
-                    $('#re_pass')[0].classList.add('alert-success'); 
-                    $('#pass')[0].classList.add('alert-success');
-                    $('#re_pass')[0].classList.remove('alert-danger');
-                    $('#pass')[0].classList.remove('alert-danger');
-                    passMatch = true;
-                }
-                else
-                {
-                    $('#re_pass')[0].classList.remove('alert-success')
-                    $('#pass')[0].classList.remove('alert-success');
-                    $('#re_pass')[0].classList.add('alert-danger')
-                    $('#pass')[0].classList.add('alert-danger');                
-                }
-            }
-            else
-            {
-                $('#re_pass')[0].classList.remove('alert-danger')
-                $('#pass')[0].classList.remove('alert-danger');
-                $('#re_pass')[0].classList.remove('alert-success')
-                $('#pass')[0].classList.remove('alert-success');
-            }
-            if ($("#name").val().length && $("#last_name").val().length && $("#email").val().length && $("#pass").val().length && $("#re_pass").val().length && passMatch)
-            {
-                $('#agree-term').removeAttr('disabled');
-                $('#agree-term')[0].classList.remove('customDisabled');
-            }
-            else
-            {
-                document.getElementById('agree-term').checked = false;
-                $('#signup').prop('disabled', 'true');
-                $('#agree-term').prop('disabled', 'true');
-                $('#agree-term')[0].classList.add('customDisabled');
-            }
-        }
-        function submitActivator() {
-            if(document.getElementById('agree-term').checked)
-            {
-                $('#signup').removeAttr('disabled');               
-                $('#signup')[0].classList.remove('customDisabled');
-                $('#successMessage')[0].style.display = 'none';
-                $('#errorMessage')[0].style.display = 'none';
-            }
-            else
-            {
-                $('#signup').prop('disabled', 'true');
-                $('#signup')[0].classList.add('customDisabled');
-            }
-        }        
-        $('#signup').on('click', function () {
-            
-            var registerVariables = {};
-            registerVariables['firstName'] = $("#name").val();
-            registerVariables['lastName'] = $("#last_name").val();
-            registerVariables['email'] = $("#email").val();
-            registerVariables['password'] = $("#pass").val();
-            //registerVariables['re_password'] = $("#re_pass").val();
-            //registerVariables['agree'] = $("#agree-term").val();
-            console.log(registerVariables);
-
-            if (ValidateEmail(registerVariables['email']) && ValidateName(registerVariables['firstName']) && ValidateName(registerVariables['lastName']))
-            {
-                // Make an AJAX
-                var url = makeURL("signupAction", registerVariables);
-                sendAjaxRequest(url, function(resp){
-                    console.log(resp);            	
-                    if (resp['responseMessage'].includes('Error'))
-                    {
-                        // Error
-                        // console.log($('#errorMessage'));
-                        $('#errorMessage')[0].style.display = 'block';
-                        $('#errorMessage')[0].innerHTML = resp['responseMessage'];
-                    }
-                    else
-                    {
-                        // Successfull Registration
-                        $('#successMessage')[0].style.display = 'block';
-                        $('#successMessage')[0].innerHTML = resp['responseMessage'];
-                        setTimeout(function(){ window.location.href = "login"; }, 500);                        
-                    }
-                });            
-            }
-            else
-            {
-                $('#errorMessage')[0].style.display = 'block';
-                $('#errorMessage')[0].innerHTML = 'Please enter valid Information';
-            }
-        });
-        function showPasswordProgress()
-        {            
-            document.getElementById('password-progress').style.display = 'block';
-        }
-        function hidePasswordProgress()
-        {            
-            document.getElementById('password-progress').style.display = 'none';
-        }
-    </script>
+    <script src="js/common.js"></script>
+    <script src="js/signup.js"></script>
 </body>
 </html>
