1. Removing classes folder which has been annoying me a lot. 2. Changing label message in UI for add application.

--- a/WebContent/jsp/dashboard.html
+++ b/WebContent/jsp/dashboard.html
@@ -53,11 +53,11 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="input-row">
-                            <label for="companyName">Company Name</label>
+                            <label for="companyName"><b>Company Name</b></label>
                             <input type="text" class="form-control" id="addAppCompanyName" placeholder="Netflix" value="" required>
                         </div>
                         <div class="input-row">
-                            <label for="appliedDate">Applied Date</label>
+                            <label for="appliedDate"><b>Applied Date</b></label>
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="appliedDatePrepend"><i class="fa fa-calendar" aria-hidden="true"></i></span>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="input-row">
                             <label for="jobDescription">Description</label>
-                            <textarea class="form-control" id="addAppJobDescription" placeholder="We are currently in search of an experienced Software Developer..." required rows="7" cols="70"></textarea>
+                            <textarea class="form-control" id="addAppJobDescription" placeholder="We are currently in search of an experienced Software Developer..." required rows="9" cols="70"></textarea>
                             <div class="invalid-tooltip">
                             </div>
                         </div>
