1. Making width/height of board responsive -> adjusting based on viewport size. 2. Adding + button to add job application. 3. Refactoring naming in javascript.

--- a/WebContent/jsp/login.html
+++ b/WebContent/jsp/login.html
@@ -78,7 +78,7 @@
 		</div>
 	</main>
 	<!-- Footer -->
-	<footer class="footer page-footer font-small blue"></footer>
+	<footer></footer>
 
 	<!-- JS, Popper.js, and jQuery -->
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
