--- a/WebContent/jsp/footer.html
+++ b/WebContent/jsp/footer.html
@@ -1,3 +1,1 @@
-<div class="footer-copyright text-center">© 2020 Copyright: jobmanager.com <br/>
-<div>send feedback to akhileshkrishnan.95@gmail.com </div>div>
-</div>
+<div class="footer-copyright text-center footer page-footer font-small blue"> <span>© 2020 Copyright: jobmanager.com </span><br/><span>send feedback to akhileshkrishnan.95@gmail.com </span></div>
