--- a/WebContent/jsp/signup.html
+++ b/WebContent/jsp/signup.html
@@ -82,7 +82,7 @@
         </div>        
     </main>
     <!-- Footer -->
-    <footer class="footer"></footer>
+    <footer></footer>
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
